# qubox

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  CODEBASE_REVIEW_REPORT.md  HardwareAcceptanceChecklist.md  LEGACY_ELIMINATION_REPORT.md  PLAN.md  README.md  READOUT_DRAG_PARITY_REPORT.md  SURVEY.md  acceptance_notebook_template.ipynb  architecture_design.md  audit_offline.py  claude_report.md  code_review_and_fixes_report.md  codereview.md  debug_ge_butterfly_readout_state.md  ge_iq_blob_consistency_report.md  ge_iq_blob_workflow_deepcheck.md  implementation_prep_matrix.md  legacy_cleanup_audit.md  mkdocs.yml  pyproject.toml  qubox_v2_code_survey.md  report.md  smoke_test_const_pulse.py  smoke_test_rabi.py  smoke_test_readout.py  standard_experiments.md  temp_cells.txt  temp_cells2.txt  test_case_report.md  test_migration.py  test_output.txt  (+5 more)
qubox_v2/: API_REFERENCE.md  HANDOFF.tex  MIGRATION.md  PARITY_REPORT.md  __init__.py  pyproject.toml
qubox_v2/analysis/: __init__.py  algorithms.py  analysis_tools.py  cQED_attributes.py  cQED_models.py  cQED_plottings.py  calibration_algorithms.py  fitting.py  metrics.py  models.py  output.py  plotting.py  post_process.py  post_selection.py  pulseOp.py  pulse_train_models.py
qubox_v2/autotune/: run_post_cavity_autotune_v1_1.py
qubox_v2/calibration/: __init__.py  algorithms.py  contracts.py  history.py  mixer_calibration.py  models.py  orchestrator.py  patch.py  patch_rules.py  pulse_train_tomo.py  state_machine.py  store.py  transitions.py
qubox_v2/compat/: __init__.py  legacy.py
qubox_v2/compile/: __init__.py  ansatz.py  api.py  evaluators.py  gpu_accelerators.py  gpu_utils.py  objectives.py  optimizers.py  param_space.py  structure_search.py  templates.py
qubox_v2/core/: __init__.py  artifact_manager.py  artifacts.py  bindings.py  config.py  errors.py  (+8 more)
(+1849 files in other folders)
