[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubox"
version = "3.0.0"
description = "Quantum Box: cQED experiment orchestration for OPX+ / Octave hardware"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "qm-qua>=1.1",
    "qualang-tools>=0.15",
    "tqdm>=4.65",
    "pandas>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gui        = ["PyQt5>=5.15"]
dev        = ["pytest>=7.0", "pytest-cov", "ruff", "ipykernel", "jupyter"]
mcp        = ["mcp[cli]>=1.2.0"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["qubox*", "qubox_tools*", "qubox_lab_mcp*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.ruff]
line-length    = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
